# models/surveyModel.js
@@ -1190,6 +1190,99 @@ const submitSurvey = async (
     }
 };
 
+const getSurveyDetails = async (survey_id, member_id) => {
+    try {
+        const query = `
+            SELECT *
+            FROM inp_survey s
+            WHERE s.id = ? AND s.member_id = ?
+        `;
+        const [rows] = await db.query(query, [survey_id, member_id]);
+        return rows[0];
+    } catch (error) {
+        console.error('Error fetching survey details:', error);
+        throw error;
+    }
+};
+
+const getSurveyQuestions = async (survey_id, member_id) => {
+    try {
+
+        // Check if the question belong to the survey created by the logged-in user
+        const checkQuery = `SELECT member_id FROM inp_survey WHERE id = ?`;
+
+        const [checkRows] = await db.query(checkQuery, [survey_id]);
+
+        if (checkRows.length === 0) {
+            throw new Error('Survey not found');
+        }
+
+        if(checkRows[0].member_id !== member_id) {
+            throw new Error('Unauthorized access to survey questions');
+        }
+
+       const [rows] = await db.query(
+            `
+            SELECT
+            q.id AS question_id,
+            q.survey_id,
+            q.question_text,
+            q.question_type,
+            q.question_image,
+            q.is_required,
+            q.question_order,
+
+            o.id AS option_id,
+            o.option_text,
+            o.option_image,
+            o.option_order
+            FROM inp_survey_question q
+            LEFT JOIN inp_survey_question_option o
+                ON q.id = o.question_id
+                AND q.survey_id = o.survey_id
+            WHERE q.survey_id = ?
+            ORDER BY q.question_order ASC, o.option_order ASC
+            `,
+            [survey_id]
+            );
+
+        const questionsMap = {};
+
+        rows.forEach((row) => {
+        if (!questionsMap[row.question_id]) {
+            questionsMap[row.question_id] = {
+            id: row.question_id,
+            survey_id: row.survey_id,
+            question_text: row.question_text,
+            question_type: row.question_type,
+            question_image: row.question_image,
+            is_required: row.is_required,
+            question_order: row.question_order,
+            options: []
+            };
+        }
+
+        if (row.option_id) {
+            questionsMap[row.question_id].options.push({
+            id: row.option_id,
+            option_text: row.option_text,
+            option_image: row.option_image,
+            option_order: row.option_order
+            });
+        }
+        });
+
+        const questions = Object.values(questionsMap);
+
+        return questions;
+
+        return rows;
+    } catch (error) {
+        console.error('Error fetching survey questions:', error);
+        throw error;
+    }
+}
+
 
 /**
  * Fetch top-level Sectors (question_id = 68)
@@ -1305,4 +1398,5 @@ module.exports = {createSurveyDetails,
     getAvailableSurveys,
     getSurveyForMeDetails,
     submitSurvey,
-     getSectors, getIndustries,getSubIndustries, getCountries, getCompanySize, getCompanyRevenue};
+     getSectors, getIndustries,getSubIndustries, getCountries, getCompanySize, getCompanyRevenue,
+    getSurveyDetails, getSurveyQuestions};
