# routes/surveyRoutes.js
@@ -22,7 +22,9 @@ const {
     getMyActiveSurveys,
     getMyDraftSurveys,
     getMyClosedSurveys,
-    getMyDeletedSurveys
+    getMyDeletedSurveys,
+    getSurveyDetails,
+    getSurveyQuestions
 } = require("../controllers/surveyController");
 
 const {
@@ -110,6 +112,48 @@ router.post(
     submitSurvey
 );
 
+// Get Active Surveys of loggedIn user
+router.get(
+    "/active-surveys",
+    authMiddleware,
+    getMyActiveSurveys
+);
+
+// Get Draft Surveys of loggedIn user
+router.get(
+    "/draft-surveys",
+    authMiddleware,
+    getMyDraftSurveys
+);
+
+// Get Closed Surveys of loggedIn user
+router.get(
+    "/closed-surveys",
+    authMiddleware,
+    getMyClosedSurveys
+);
+
+// Get Deleted Surveys of loggedIn user
+router.get(
+    "/deleted-surveys",
+    authMiddleware,
+    getMyDeletedSurveys
+);
+
+// Get Survey details for loggedIn user
+router.get(
+    "/survey-details/:survey_id",
+    authMiddleware,
+    getSurveyDetails
+);
+
+// Get Questions for loggedIn user
+router.get(
+    "/survey-questions/:survey_id",
+    authMiddleware,
+    getSurveyQuestions
+);
+
 /*
 |--------------------------------------------------------------------------
 | Master Data APIs
@@ -160,32 +204,6 @@ router.post(
     getIndustries
 );
 
-// Get Active Surveys of loggedIn user
-router.get(
-    "/active-surveys",
-    authMiddleware,
-    getMyActiveSurveys
-);
 
-// Get Draft Surveys of loggedIn user
-router.get(
-    "/draft-surveys",
-    authMiddleware,
-    getMyDraftSurveys
-);
-
-// Get Closed Surveys of loggedIn user
-router.get(
-    "/closed-surveys",
-    authMiddleware,
-    getMyClosedSurveys
-);
-
-// Get Deleted Surveys of loggedIn user
-router.get(
-    "/deleted-surveys",
-    authMiddleware,
-    getMyDeletedSurveys
-);
 
 module.exports = router;
